# sds100

./: .gitignore  README.md  pyproject.toml  sds100-cli
docs/: FORMAT.md
sds100/: cli.py  codec.py  firmware.py  format.py  model.py  scanner.py  schema.py
tests/: test_roundtrip.py
